--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -39,16 +39,16 @@
 			<div class="row">	
 				<div class="col-lg-6">			
 					<div class="left-sec animate__animated  animate__fadeInLeft">					
-						<h1>Employer</h1>
-						<p>An hassle-free SAP talent finding platform. Make your hiring decisions faster and easier</p>
-						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">Get Started</a>
+						<h1> {{"homePage.title" | translate }}  </h1>
+						<p> {{"homePage.content1" | translate }} </p>
+						<a (click)="onRedirectUrl('/auth/employer/login')" class="btn empl-btn my-3">{{"homePage.getStarted" | translate }}</a>
 					</div>
 				</div>
 				<div class="col-lg-6">	
 					<div class="right-sec animate__animated  animate__fadeInRight">						
-						<h1>Talent</h1>
-						<p>Make your career move with confidence. A Job Portal built on advice of SAP domain experts</p>
-						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">Get Started</a>
+						<h1> {{"homePage.talent" | translate }}</h1>
+						<p>{{"homePage.content2" | translate }}</p>
+						<a (click)="onRedirectUrl('/auth/user/login')"  class="btn tale-btn my-3">{{"homePage.getStarted" | translate }}</a>
 					</div>
 				</div>	
 			</div>
@@ -63,9 +63,9 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="section-title">
-          <h1>Our Happy Clients</h1>
-          <span class="section-title-bg">Employer </span>
-          <h5>We have brought candidates closer to them. From start-ups to SMEs and large corporations, we ensure we scrutinize and shortlist the right candidate they were longing for</h5>
+          <h1> {{"homePage.clientsHeading" | translate }} </h1>
+          <span class="section-title-bg">{{"homePage.title" | translate }}  </span>
+          <h5> {{"homePage.content3" | translate }} </h5>
         </div>
       </div>
     </div>
@@ -122,8 +122,8 @@
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="heading">
-						<h1>Your SAP Job Search Expert</h1>
-						<h5>Find jobs, create a search -friendly profile and enrich your applications. Here is how we can help you with getting your dream job!</h5>
+						<h1>{{"homePage.content4" | translate }} </h1>
+						<h5>{{"homePage.content5" | translate }} </h5>
 						
 					</div>
 					<div class="mt-5 d-flex">
@@ -131,8 +131,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon1.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Matches</h3>
-									<p>You are viewed based on must-have and good to have skillsets</p>
+									<h3 class="mt-0"> {{"homePage.content6" | translate }}</h3>
+									<p> {{"homePage.content7" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -140,8 +140,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon2.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Compare profiles</h3>
-									<p>Compare the opportunities and pick what suits your candidature</p>
+									<h3 class="mt-0"> {{"homePage.content8" | translate }} </h3>
+									<p>{{"homePage.content9" | translate }} </p>
 								</div>
 							</div>
 						</div>
@@ -151,8 +151,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon3.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">User-friendly Dashboard</h3>
-									<p> Know matching opportunities, availability, pick what suits you the best</p>
+									<h3 class="mt-0">{{"homePage.content19" | translate }} </h3>
+									<p>{{"homePage.content10" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -160,8 +160,8 @@
 							<div class="media">
 								<img src="assets/images/sapw-info-icon4.png" class="mr-3">
 								<div class="media-body">
-									<h3 class="mt-0">Complete Access</h3>
-									<p>Manage your profile with what you want to show online and whatnot</p>
+									<h3 class="mt-0">{{"homePage.content11" | translate }} </h3>
+									<p>{{"homePage.content12" | translate }}</p>
 								</div>
 							</div>
 						</div>
@@ -171,74 +171,7 @@
 		</div>
 	</section>
 	<!-- //SAPW Info Section -->
-	
-	<!-- Contact Form Section -->
-	<section class="contact-form ">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h1>Get in touch with us</h1>
-						<h5>Looking for something more? Let’s talk. We’d love to hear from you. Write to us and our executive shall stay in touch</h5>
-						<span class="section-title-bg">CONTACT </span>
-						<h5>&nbsp;</h5>
-					</div>
-				</div>
-				<div class="col-lg-6 cform-img">
-					<ul class="contact-info">
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-map-marker-alt"></i>
-							</div> 
-							<div class="text">
-								<h4>Location</h4>
-								<span>Chennai, Tamilnadu,<br> INDIA</span>
-							</div> 
-						</li>
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-mobile-alt"></i>
-							</div>
-							<div class="text">
-								<h4>Phone</h4>
-								<span>+91-123-456-7890 <br>+91-123-456-7890</span>
-							</div>
-						</li>
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-paper-plane"></i>
-							</div>
-							<div class="text">
-								<h4>Email</h4>
-								<span>info@sapworld.com<br>admin@sapworld.com</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="col-lg-6 bg-light">
-					<form class="p-5">
-						<div class="form-group">
-							<label>Your Name</label>
-							<input type="text" class="form-control" placeholder="Your Full Name">
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlInput1">Your Email</label>
-							<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email Address">
-						</div>
-						<div class="form-group">
-							<label>Subject</label>
-							<input type="text" class="form-control" placeholder="Subject">
-						</div>
-						<div class="form-group">
-							<label>Your Message</label>
-							<textarea class="form-control" placeholder="Message" rows="5"></textarea>
-						</div>
-						<div class="form-group mt-5">
-							<button type="button" class="btn btn-theme-blue btn-block btn-lg">Send Message</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
+	<section>
+	<!-- Contact Form -->
+	<app-contact-form></app-contact-form>
 	</section>
-	<!-- //Contact Form  Section -->
