--- a/frontend/src/app/modules/features/common/home/home.component.html
+++ b/frontend/src/app/modules/features/common/home/home.component.html
@@ -1,36 +1,3 @@
-    <!-- Header Section
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light theme-nav">
-			<div class="container-fluid">
-				<a href="#" class="navbar-brand"><img src="assets/images/logo.png"/></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-					<ul class="navbar-nav ml-auto ">
-					   <li class="nav-item dropdown bg-white">
-						<a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
-							<li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  type="button">Employer</a></li>								
-							<li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  type="button">Jobseeker</a></li>								
-						</ul>
-					  </li>
-					</ul>
-					<ul class="navbar-nav ml-2">
-					  <li class="nav-item">
-						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
-					  </li>	
-					  <li class="nav-item">
-						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-twitter"></i></a>
-					  </li>	
-					  <li class="nav-item">
-						<a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-facebook-f" style="width:12.25px;"></i></a>
-					  </li>	
-					</ul>
-				</div>
-		    </div>
-		</nav>
-    </header>-->
 
 <!-- Landing Page-->
 <section class="landing-section">
@@ -173,72 +140,5 @@
 	<!-- //SAPW Info Section -->
 	
 	<!-- Contact Form Section -->
-	<section class="contact-form ">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h1>{{"homePage.content13" | translate }} </h1>
-						<h5>{{"homePage.content14" | translate }} </h5>
-						<span class="section-title-bg"> {{"homePage.content15" | translate }}  </span>
-						<h5>&nbsp;</h5>
-					</div>
-				</div>
-				<div class="col-lg-6 cform-img">
-					<ul class="contact-info">
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-map-marker-alt"></i>
-							</div> 
-							<div class="text">
-								<h4>Location</h4>
-								<span>Chennai, Tamilnadu,<br> INDIA</span>
-							</div> 
-						</li>
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-mobile-alt"></i>
-							</div>
-							<div class="text">
-								<h4>Phone</h4>
-								<span>+91-123-456-7890 <br>+91-123-456-7890</span>
-							</div>
-						</li>
-						<li class="d-flex">
-							<div class="icon">
-								<i class="fas fa-paper-plane"></i>
-							</div>
-							<div class="text">
-								<h4>Email</h4>
-								<span>info@sapworld.com<br>admin@sapworld.com</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div class="col-lg-6 bg-light">
-					<form class="p-5">
-						<div class="form-group">
-							<label>Your Name</label>
-							<input type="text" class="form-control" placeholder="Your Full Name">
-						</div>
-						<div class="form-group">
-							<label for="exampleFormControlInput1">Your Email</label>
-							<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email Address">
-						</div>
-						<div class="form-group">
-							<label>Subject</label>
-							<input type="text" class="form-control" placeholder="Subject">
-						</div>
-						<div class="form-group">
-							<label>Your Message</label>
-							<textarea class="form-control" placeholder="Message" rows="5"></textarea>
-						</div>
-						<div class="form-group mt-5">
-							<button type="button" class="btn btn-theme-blue btn-block btn-lg">Send Message</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section>
+	<app-contact-form></app-contact-form>
 	<!-- //Contact Form  Section -->
