Calender view integration

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -207,6 +207,7 @@
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/dashboard']" href="javascript:;">{{"header.dashboard" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/create-candidate']" href="javascript:;">{{"header.profile" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/notification']" href="javascript:;">{{"header.notification" | translate}}</a></li>
+              <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/calendar']" href="javascript:;">{{"common.calender" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/profile-setting']" href="javascript:;">{{"header.settings" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" (click)="logout()" href="javascript:;">{{"header.logout" | translate}}</a></li>
             </ul>
