--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -171,7 +171,7 @@
 		</div>
 	</section>
 	<!-- //SAPW Info Section -->
-	<section>
-	<!-- Contact Form -->
+	
+	<!-- Contact Form Section -->
 	<app-contact-form></app-contact-form>
-	</section>
+	<!-- //Contact Form  Section -->
