--- a/frontend/src/app/modules/features/common/not-found/not-found.component.html
+++ b/frontend/src/app/modules/features/common/not-found/not-found.component.html
@@ -315,8 +315,8 @@
 </defs>
 </svg>
 
-<h1 style="text-align: center;">Invalid Invite Link</h1>
-<h6 style="text-align: center;">Please Contact the employer to send the invite link again</h6>
+<h1 style="text-align: center;">Invalid URL</h1>
+<h6 style="text-align: center;">Please Check the Link and view the Page</h6>
     </div>
 	
   </div>
