--- a/frontend/src/app/modules/features/user/calendar/calendar.component.css
+++ b/frontend/src/app/modules/features/user/calendar/calendar.component.css
@@ -13,6 +13,8 @@
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
+  -webkit-box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
 }
 
 .animated-button1::before {
@@ -123,6 +125,7 @@
             transform: translateY(100%);
   }
 }
+
 .blue-animation {
   background: linear-gradient(-30deg, #2cd4fe 50%, #23a8f9 50%) !important;
 }
