--- a/frontend/src/app/shared/component/login-form/login-form.component.html
+++ b/frontend/src/app/shared/component/login-form/login-form.component.html
@@ -16,6 +16,7 @@
       <i class="fas fa-lock"></i>
     </div>
     <app-control-messages [control]="f['password']"></app-control-messages>
+	<small class="text-danger " *ngIf="showError"> Please enter a valid email address and Password .</small>
   </div>
 
   <div class="login-controls form-group">
