Calendar Module Adding in User

--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -239,7 +239,7 @@
 					  <span></span>
 					  <span></span>
 					  <span></span>
-					   <i class="fas fa-sync fa-spin"></i>
+					   <i class="fas fa-sync "></i>
 					  {{"common.refresh" | translate}}
 					</a>
 				</div>
