--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -104,7 +104,7 @@
 
 <ng-template *ngIf="isOpenInviteUrl" #InviteModel let-modal>
 	<div class="modal-header">
-			<h5 class="modal-title" id="exampleModalLabels">{{"common.inviteLink" | translate}}</h5>
+			<!-- <h5 class="modal-title" id="exampleModalLabels">{{"common.inviteLink" | translate}}</h5> -->
 		</div>
 		<div class="modal-body"  >
 			<!-- <div class="form-group" *ngIf="showInput ==true">
@@ -210,7 +210,7 @@
 										<p>{{items?.comments}}</p>
 										<br>
 										<h6 style="font-size: 11px;margin-bottom:5px;" *ngIf="items?.rescheduled || items?.invited || items?.created || items?.canceled">History</h6>
-										<p *ngIf="items?.invited">You have been send the invite link on <span class="blu" >{{items?.invited | date: 'longDate' }} </span> at <span class="blu" >{{items?.invited | date: 'shortTime' }} </span> </p>
+										<p *ngIf="items?.invited">You have been sent the invite link on <span class="blu" >{{items?.invited | date: 'longDate' }} </span> at <span class="blu" >{{items?.invited | date: 'shortTime' }} </span> </p>
 										<p *ngIf="items?.created">Accepted the invite link on <span class="gre" >{{items?.created | date: 'longDate' }} </span> at <span class="gre" >{{items?.created | date: 'shortTime' }} </span> </p>
 										<p *ngIf="items?.canceled">Canceled the invite link on  <span class="re" >{{items?.canceled | date: 'longDate' }} </span> at <span class="re" >{{items?.canceled | date: 'shortTime' }} </span></p>
 										<p *ngIf="items?.rescheduled">Rescheduled the invite link on <span class="yel" >{{items?.rescheduled | date: 'longDate' }} </span> at <span class="yel" >{{items?.rescheduled | date: 'shortTime' }} </span></p>
