--- a/frontend/src/app/modules/features/user/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/user/calendar/calendar.component.html
@@ -17,28 +17,33 @@
 				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 					<li class="nav-item">
 						<a (click)="onTabChange({tabName: 'calender', tabNumber: 1})"
-			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 1}" >{{"common.inviteSettings" | translate}}</a>
+			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 1}" >{{"common.calender" | translate}}</a>
 					</li>
 					<li class="nav-item">
 						<a  (click)="onTabChange({tabName: 'schedule', tabNumber: 2})"
-			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}" >{{"common.calender" | translate}}</a>
+			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}" >{{"common.calenderCustom" | translate}}</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 		
-		<div class="row " style="margin-left:5rem" *ngIf="invitelink && currentTabInfo.tabNumber == 1">
-			<div class="col-lg-6 col-md-12">
-				<img src="assets/images/appointment.png" class="img-fluid mx-auto"/>
+		<div class="row " *ngIf="currentTabInfo.tabNumber == 1">
+			<div class="col-lg-12 col-md-12" style="text-align: end;margin-bottom:1rem;"  >
+				<button (click)="onPrintClick()" type="button" class="btn btn-theme-blue" >
+				<span class="e-btn-icon e-icons e-print e-icon-left"></span>
+				{{"common.print" | translate}} </button>
 			</div>
-			<div class="col-lg-6 col-md-12" style="align-self: center;">
-				<a class="animated-button1" (click)="sendlink()" style="cursor:pointer;">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-					{{"common.inviteSettingsTitle" | translate}}
-				</a>
+			<br/>
+			<div class="col-lg-12 col-md-12">
+				
+				<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)"  [currentView]='currentView' [eventSettings]='eventSettings'>
+					<e-views>   
+						<e-view option='Day' [readonly]="isReadOnly"></e-view>
+						<e-view option='Week' [readonly]="isReadOnly"></e-view>
+						<e-view option='Month' [readonly]="isReadOnly"></e-view>
+						<e-view option='Agenda' [readonly]="isReadOnly"></e-view>
+					</e-views>
+				</ejs-schedule>
 			</div>
 		</div>
 		<div *ngIf="currentTabInfo.tabNumber == 2">
@@ -144,7 +149,7 @@
 					  <span></span>
 					  <span></span>
 					  <span></span>
-					   <i class="fas fa-sync fa-spin"></i>
+					   <i class="fas fa-sync "></i>
 					  {{"common.refresh" | translate}}
 					</a>
 				</div>
