--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -24,13 +24,13 @@
 			 {{"shared.accountSetting" | translate}}
 			</a>
 		  </li>
-		  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
+		  <!--<li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
 			<a
 			(click)="onTabChange({tabName: 'inviteLink', tabNumber: 2})"
 			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
 			 {{"common.inviteSettings" | translate}}
 			</a>
-		  </li>
+		  </li>-->
 		</ul>
       </div>
     </div>
@@ -38,7 +38,7 @@
 
     </app-change-password>
 	
-	<div *ngIf="currentTabInfo.tabNumber == 2 ">
+	<!--<div *ngIf="currentTabInfo.tabNumber == 2 "> 
 	<div *ngIf="companyProfileInfo.invite_status == true ">
 	  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfo()">
 		<div class="container">
@@ -82,7 +82,7 @@
 		</div>
 		</div>
 	</div>
-	</div>
+	</div>-->
   </div>
 </section>
 <ng-template #openSuccessPopup let-modal>
