--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -204,28 +204,32 @@
 		</div>	
 	</ng-template>
 	<ng-template *ngIf="openBookingSite" #bookingModel let-modal let-d="dismiss">
+		<div class="modal-header">	
+			<button type="button" (click)="closeInvite()" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
 		<div class="modal-content">
 			<div class="modal-body text-center checkVal" [id]="itemsIDVAL.invite_url"  *ngIf="openNotBook != true ">
-			
 			<input style="display:none;" id="name" [value]="itemsIDVAL.user.first_name" />
 				<input style="display:none;" id="email" [value]="itemsIDVAL.user.email" />
 				<input style="display:none;" id="appid" [value]="itemsIDVAL.id" />
 				<!-- Calendly inline widget begin -->
 				
- <div #container class="calendly-inline-widget" style="min-width:320px;height:580px;" data-auto-load="false">
+ <div #container class="calendly-inline-widget" style="min-width:320px;height:520px;" data-auto-load="false">
  <div class="calendly-spinner"><div class="calendly-bounce1"></div><div class="calendly-bounce2"></div><div class="calendly-bounce3"></div></div>
  </div><!-- Calendly inline widget end -->
 			</div>
 			<div class="modal-body text-center " *ngIf="openNotBook == true">
-			<iframe width="100%" height="100%" frameBorder="0" style="min-width:320px;height:580px;border:0;" [src]="url"></iframe>
+			<iframe width="100%" height="100%" scrolling="no" id="iframeData"  #iframeData frameBorder="0" style="min-width:320px;height:520px;border:0;" [src]="url"></iframe>
 
 			</div>
 			
-			<div class="modal-footer">
+			<!-- <div class="modal-footer">
 				<div class=" mx-auto">
-					<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeInvite()"  data-dismiss="modal">{{"shared.ok" | translate}}</button>
+					<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeInvite()"  data-dismiss="modal">{{"shared.close" | translate}}</button>
 				</div>
-			</div>
+			</div> -->
 		</div>	
 	</ng-template>
 </section>
