--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -165,8 +165,8 @@
 									</div>
 									<div class="col-lg-12 info" style="text-align:end;">
 										<button type="button"   *ngIf="!matchingJobNew?.jobs.is_job_applied "  [ngClass]="{'applied-btn-green': (matchingJobNew?.jobs.is_job_applied ), 'btn-outline-green': !matchingJobNew?.jobs.is_job_applied}" [disabled]="matchingJobNew?.jobs.is_job_applied " (click)="onToggleResumeSelectModals(true, matchingJobNew?.jobs)" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.apply" | translate}}</button>
-										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied && && matchingJobNew?.jobs?.job_application?.status != 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}}</button>
-										<button type="button"  *ngIf="&& matchingJobNew?.jobs?.job_application?.status == 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.hired" | translate}} </button>
+										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied && matchingJobNew?.jobs?.job_application?.status != 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.applied" | translate}}</button>
+										<button type="button"  *ngIf="matchingJobNew?.jobs.is_job_applied && matchingJobNew?.jobs?.job_application?.status == 2 " [disabled]="matchingJobNew?.jobs.is_job_applied "  class="btn btn-outline-green ml-auto applied-btn-green" data-toggle="modal" data-target="#applyJob" style="bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> {{"shared.hired" | translate}} </button>
 									</div>
 								</div>
 							</div>
