--- a/frontend/src/app/modules/features/user/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/user/calendar/calendar.component.html
@@ -28,12 +28,12 @@
 		</div>
 		
 		<div class="row " *ngIf="currentTabInfo.tabNumber == 1">
-			<div class="col-lg-12 col-md-12" style="text-align: end;margin-bottom:1rem;"  >
+			<!-- <div class="col-lg-12 col-md-12" style="text-align: end;margin-bottom:1rem;"  >
 				<button (click)="onPrintClick()" type="button" class="btn btn-theme-blue" >
 				<span class="e-btn-icon e-icons e-print e-icon-left"></span>
 				{{"common.print" | translate}} </button>
 			</div>
-			<br/>
+			<br/> -->
 			<div class="col-lg-12 col-md-12">
 				
 				<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)"  [currentView]='currentView' [eventSettings]='eventSettings'>
