--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -18,15 +18,41 @@
       <div class="col-lg-12 title">
 		<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 		  <li class="nav-item active">
-			<a
-			 href="javascript:;" class="nav-link active">
+			<a (click)="OnAccount()"
+			 href="javascript:;" [ngClass]="(tab1 === true)?'nav-link active':'nav-link'">
 			 {{"shared.accountSetting" | translate}}
+			</a>
+		  </li>
+		  <li class="nav-item">
+			<a (click)="OnNotification()"
+			 href="javascript:;"  [ngClass]="(tab2 === true)?'nav-link active':'nav-link'">
+			 {{"shared.notificationSetting" | translate}}
 			</a>
 		  </li>
 		</ul>
       </div>
     </div>
-    <app-change-password [role]="'employer'" >
+    <app-change-password *ngIf="tab1" [role]="'employer'" >
     </app-change-password>
+	<div *ngIf="tab2">
+	<div class="row mb-5" *ngFor="let item of notificationSettings; let i=index">
+    <div class="col-lg-4 col-md-6">
+		<h5 *ngIf="item?.field == 'new_match'">{{"notificationSettingsEmployer.notification1" | translate }}</h5>
+        <h5 *ngIf="item?.field == 'new_candidate_applied'">{{"notificationSettingsEmployer.notification2" | translate }}</h5>
+        <h5 *ngIf="item?.field == 'matching_canditate_respond'">{{"notificationSettingsEmployer.notification3" | translate }}</h5>
+     
+    </div>
+    <div class="col-lg-3 col-md-6">
+      <div class="showhideswitch">
+        <input [checked]="(employerDetails?.privacy_protection && privacyProtection[item?.field] == true)"
+          (click)="onSetSettings(item, $event?.target?.checked)" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch_{{i}}">
+        <label class="showhideswitch-label" for="myshowhideswitch_{{i}}">
+          <span class="showhideswitch-inner"></span>
+          <span class="showhideswitch-switch"></span>
+        </label>
+      </div>
+    </div>
+  </div>
+	</div>
   </div>
 </section>
