--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -30,20 +30,10 @@
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6" style="text-align: right;">
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
-							</ng-container>
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==1">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / Annual '}}</h6>
-							</ng-container>
-							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==2">
-								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / month'}}</h6>
-							</ng-container>
-							<ng-container  *ngIf="postJobForm?.value?.jobInfo?.salary_type < 0">
-								--
-							</ng-container>
 							<h6 class="text-capitalize job-cardh6">{{"userProfile.remote" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}} </h6>
-							<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.willing_to_relocate)}} </h6> -->
+							<ng-container *ngIf="postJobForm?.value?.jobInfo?.min && postJobForm?.value?.jobInfo?.max">
+							<h6 class="text-capitalize job-cardh6 "*ngIf="postJobForm?.value?.jobInfo?.salary_type ==6">{{"shared.workTiming" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}} </h6>
+							</ng-container>
 						</div>
 						</div>
 					</div>
@@ -1063,6 +1053,49 @@
         <div class="col-lg-12 mb-4">
 			
 			<p style="word-break: break-all;"[innerHTML]="sanitizer.bypassSecurityTrustHtml(postJobForm?.value?.jobInfo?.description)"></p>
+		</div>	
+		<div class="row mt-2">
+			<div class="col-md-6 ">
+				<h6 class="font-weight-bold mb-2" >{{"shared.jobLocation" | translate}} </h6>
+				<ng-container *ngFor="let data_location of postJobForm?.value?.jobInfo?.job_locations ">
+					<h6 class="text-capitalize job-cardh6" *ngIf="data_location?.city && data_location?.countryShort"> 
+						{{data_location?.city}} - {{data_location?.countryShort}}
+					</h6>
+				</ng-container>
+			</div>	
+			<div class="col-md-3">
+				<h6 class="font-weight-bold mb-2" >{{"shared.workTiming" | translate}} </h6>
+				
+					<h6 class="text-capitalize job-cardh6"> 
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.min ">
+							{{postJobForm?.value?.jobInfo?.min | time}}
+						</ng-container>
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.min && postJobForm?.value?.jobInfo?.max  ">
+							-
+						</ng-container>
+						
+						<ng-container *ngIf="postJobForm?.value?.jobInfo?.max ">
+							{{postJobForm?.value?.jobInfo?.max | time}}
+						</ng-container>
+					</h6>
+				
+			</div>	
+			<div class="col-md-3 ">
+				<h6 class="font-weight-bold mb-2" >{{"shared.salary" | translate}} </h6>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
+				</ng-container>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==1">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / Annual '}}</h6>
+				</ng-container>
+				<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==2">
+					<h6 class="text-capitalize job-cardh6"> {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / month'}}</h6>
+				</ng-container>
+				<ng-container  *ngIf="postJobForm?.value?.jobInfo?.salary_type < 0">
+					--
+				</ng-container>
+							
+			</div>	
 		</div>	
 		<div class="row mt-2">
 		<div class="col-md-12 mb-2">
