--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -1058,8 +1058,8 @@
 			<div class="col-md-6 ">
 				<h6 class="font-weight-bold mb-2" >{{"shared.jobLocation" | translate}} </h6>
 				<ng-container *ngFor="let data_location of postJobForm?.value?.jobInfo?.job_locations ">
-					<h6 class="text-capitalize job-cardh6" *ngIf="data_location?.city && data_location?.countryShort"> 
-						{{data_location?.city}} - {{data_location?.countryShort}}
+					<h6 class="text-capitalize job-cardh6" *ngIf="data_location?.city && data_location?.countryshort"> 
+						{{data_location?.city}} - {{data_location?.countryshort}}
 					</h6>
 				</ng-container>
 			</div>	
