--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -4,9 +4,9 @@
       <div class="col-lg-12">
         <div class="matching-post" *ngIf="showCount && showJob">
               <ng-container *ngFor="let item of postedJobs; let i = index"  >
-          <div *ngIf="checkDataCount(item?.id) != 0 && checkDataCount(item?.id) != '0'"  class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
+          <div *ngIf="checkDataCount(item?.id,item?.job_location?.id) != 0 && checkDataCount(item?.id,item?.job_location?.id) != '0'"  class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
             <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
-            <label  class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} ({{ checkDataCount(item?.id)}}) </label>
+            <label  class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} ({{ checkDataCount(item?.id,item?.job_location?.id)}}) </label>
 			<!--  {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} -->
 			</div>
 			</ng-container>
